test/fail/issue2331.mo
ignore ({foo = 0} : { bar : Nat });
